--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html {% if section %} data-current="{{ section }}"{% endif %} lang="en">
+<html {% if section %} data-current="{{ section }}"{% endif %} lang="fr">
 
 	{% include "components/head.njk" %}
 
@@ -15,9 +15,6 @@
 		<main>
 			{{ layoutContent | safe }}
 		</main>
-
-		{% include "components/footer.njk" %}
-
 	</body>
 
 </html>
