--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,14 @@
 
 		<header>
 			<em>
-				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
+				<a href="{{ '/' | url }}">
+					<img
+						src="{{ '/static/img/hero.jpg' | url }}"
+						class="hero"
+						alt="{{ metadata.title }}"
+						title="Agir, Représenter et Protéger les Enfants et leur Famille"
+					>
+				</a>
 			</em>
 			{% include "components/nav.njk" %}
 		</header>
